examples/optionality/negative/embedded_wrapper/schema.go
//go:build jsonschema

package embedded_wrapper

import (
	"encoding/json"

	jsonschema "github.com/tylergannon/go-gen-jsonschema"
)

func (Config) Schema() json.RawMessage { panic("not implemented") }

var _ = jsonschema.NewJSONSchemaMethod(Config.Schema)
